# learning-numbers

./: LICENSE  README.md  pyproject.toml
learn_numbers/: main.py
