[tool.poetry]
name = "learn_numbers"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
inflect = "^5.3.0"
gTTS = "^2.2.3"
playsound = "^1.3.0"
googletrans = "4.0.0rc1"
pyobjc = "^7.3"

[tool.poetry.dev-dependencies]
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
